fixed scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -87,14 +87,14 @@
   }
 
   ::-webkit-scrollbar-thumb {
-    background-color: rgb(37, 38, 40);
+    background-color: rgb(249, 40, 71);
     border-radius: 10px;
   }
 
   ::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(249, 40, 71, 0.803);
   }
   ::-webkit-scrollbar-thumb:active {
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgb(255, 77, 104);
   }
 }
